--- a/ImproveGroup/IG_Update Actual Cost And Actual Hours Type Project Record/IG_Update Actual Cost And Actual Hours Type Project Record.csproj
+++ b/ImproveGroup/IG_Update Actual Cost And Actual Hours Type Project Record/IG_Update Actual Cost And Actual Hours Type Project Record.csproj
@@ -30,6 +30,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>UpdateActualCostAndHours.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Crm.Sdk.Proxy">
       <HintPath>..\packages\Microsoft.CrmSdk.CoreAssemblies.9.0.2.5\lib\net452\Microsoft.Crm.Sdk.Proxy.dll</HintPath>
@@ -49,6 +55,9 @@
   <ItemGroup>
     <Compile Include="UpdateActualCostAndHours.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="UpdateActualCostAndHours.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
