--- a/ImproveGroup/IG_CalculateProjectRecordTotals/IG_CalculateProjectRecordTotals.csproj
+++ b/ImproveGroup/IG_CalculateProjectRecordTotals/IG_CalculateProjectRecordTotals.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{768ACD64-BCA1-4FE0-8FB9-15E4D6773319}</ProjectGuid>
+    <ProjectGuid>{E270646F-EBC5-47A0-A413-2CCA0AD9B9DF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IG_DeleteBidsheetLineItems</RootNamespace>
-    <AssemblyName>IG_DeleteBidsheetLineItems</AssemblyName>
+    <RootNamespace>IG_CalculateProjectRecordTotals</RootNamespace>
+    <AssemblyName>IG_CalculateProjectRecordTotals</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -34,7 +34,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>DeleteBidsheetLineItems.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>CalculateProjectRecordTotals.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Crm.Sdk.Proxy">
@@ -53,11 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeleteBidsheetLineItems.cs" />
+    <Compile Include="CalculateProjectRecordTotals.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DeleteBidsheetLineItems.snk" />
+    <None Include="CalculateProjectRecordTotals.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
